--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "keywords": [
     "ecosystem:cordova",
-    "cordova-ios"
+    "cordova-ios",
+    "cordova-android",
+    "cordova-browser",
+    "cordova:plugin"
   ],
   "engines": {
     "cordovaDependencies": {
